--- a/templates/students_list.html
+++ b/templates/students_list.html
@@ -121,6 +121,9 @@
         <a href="{{ url_for('add_student') }}" class="btn btn-primary"
           >Add Student</a
         >
+        <a href="{{ url_for('export_students') }}" class="btn btn-success"
+          >Export to Excel</a
+        >
         <a href="{{ url_for('dashboard') }}" class="btn btn-primary"
           >Back to Home</a
         >
